# IPPC-ROBOT

./: README.md
arduino/: ippc-project.ino
js/: .env  package-lock.json  package.json
js/public/: index.html
js/src/: App.tsx  index.tsx  react-app-env.d.ts
js/src/assets/scss/: globals.scss
js/src/components/Crane/: Crane.scss  Crane.tsx
js/src/components/Grabber/: Grabber.scss  Grabber.tsx
js/src/components/Steering/: Steering.tsx
rust/: Cargo.toml
rust/src/: arduino_helper.rs  crane.rs  grabber.rs  json_models.rs  logger.rs  main.rs  motor.rs  robust_arduino.rs  ultrasonic.rs
