[package]
name = "ippc-backend"
version = "0.1.0"
authors = ["Tobias Franek <tfranek.mmt-b2018@fh-salzburg.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serial = "0.4.0"
websocket = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.10"